# opensdd

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  release.yml
agents/: README.md  build-agent.md  compare-agent.md  compare-spec-agent.md  package-agent.md  probe-agent.md  verify-compare.md
commands/: build.md  compare.md  cov.md  create-blueprint.md  create-spec.md  fix.md  package.md  super-implement.md  super-review.md  super-scan.md  tdd.md  visualize.md
docs/: AGENTS_DESIGN.json  blueprint.md
docs/assets/: .gitkeep
example/: blueprint.md  spec.yaml
scripts/: install-spec-extract.ps1  install-spec-extract.sh
skills/build-loop/: SKILL.md
skills/build-loop/scripts/: state.py
skills/build-spec/: SKILL.md
skills/build-spec/scripts/: state.py
skills/compare-spec/: SKILL.md
skills/compare-spec/references/: output-schema.yaml
skills/create-blueprint/: SKILL.md
skills/create-spec/: SKILL.md
skills/fix-spec/: SKILL.md
skills/package-spec/: SKILL.md
skills/tdd-spec/: SKILL.md
skills/visualize-spec/: SKILL.md
tools/spec-extract/: Cargo.toml
tools/spec-extract/src/: lib.rs  main.rs
tools/spec-extract/src/output/: file_spec.rs  index.rs  mod.rs
tools/spec-extract/src/parser/: mod.rs  traits.rs  tree_sitter.rs
tools/spec-extract/src/plugins/: go.rs  mod.rs  python.rs  rust.rs  typescript.rs
tools/spec-extract/src/spec/: io.rs  mod.rs  types.rs
tools/spec-extract/tests/fixtures/: example.go  example.py  example.rs  example.ts
(+62 files in other folders)
