[package]
name = "spec-extract"
version = "0.1.0"
edition = "2021"
description = "Multi-language code specification extractor"
authors = ["spec-extract contributors"]
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
tree-sitter = "0.24"
tree-sitter-go = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
anyhow = "1"
walkdir = "2"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"
